feat(citizen-api): Create new registration

--- a/src/core/core.csproj
+++ b/src/core/core.csproj
@@ -4,6 +4,13 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>ProxyVote.Core</RootNamespace>
+    <AssemblyName>ProxyVote.Core</AssemblyName>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="6.0.1" />
+  </ItemGroup>
 
 </Project>
