build: trigger infra deployment when IaC changes

--- a/.github/workflows/deploy-infrastructure.yaml
+++ b/.github/workflows/deploy-infrastructure.yaml
@@ -6,7 +6,7 @@ on:
       - 'main'
       - 'prod'
     paths: 
-      - 'infrastructure/*'
+      - 'infrastructure/**'
       - '.github/workflows/deploy-infrastructure.yaml'
 
 env: 
