build: Add dependency for function URL

--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -111,6 +111,7 @@ jobs:
     runs-on: ubuntu-20.04        
     needs: 
       - build-application
+      - deploy-infrastructure
     steps:          
     - name: Get current environment
       run: |
