build: fix recursive launch of E2E build

--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -6,7 +6,7 @@ on:
       - 'main'
       - 'prod'
     paths: 
-      - 'src/*'
+      - 'src/**'
       - 'proxyvote.sln'
       - '.github/workflows/deploy-app.yaml'
       - 'infrastructure/**'
