--- a/.github/workflows/accessibility.yaml
+++ b/.github/workflows/accessibility.yaml
@@ -47,7 +47,7 @@ jobs:
 # path: 'output/citizen-front'
 
 
-    test_accessibility: 
+    test-accessibility: 
         runs-on: ubuntu-latest
         needs: 
               - build-application
